Обновить конфигурацию и документацию для сервиса аутентификации
- Удалены зависимости от JWKS, вместо этого реализована поддержка PEM формата для публичного ключа.
- Обновлены порты в конфигурации для внутреннего API, добавлен новый порт 8090 для административных функций и метрик.
- Обновлены эндпоинты в документации, включая информацию о новых портах и изменениях в API.
- Улучшены метрики и обработка запросов, включая обновление health check для нового внутреннего порта.

Эти изменения обеспечивают более безопасное и упрощенное управление аутентификацией, а также улучшают документацию для разработчиков.
